// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationWindow should display a success notification 1`] = `
.c0 {
  background: green;
  border-style: solid;
  border-width: 0.4rem;
  width: 90%;
  position: relative;
  margin: 0 auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.5rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-align: center;
  font-size: 4rem;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0 1rem;
  overflow-wrap: break-word;
}

.c3 {
  border: none;
  background-color: transparent;
  font-size: 2rem;
}

@media (min-width:768px) {
  .c0 {
    width: 100%;
    margin: 0;
  }
}

<NotificationWindow
  notification={
    Object {
      "message": "notification message",
      "notificationType": "success",
    }
  }
  onDismiss={[Function]}
>
  <styled.div
    background={
      Array [
        "
              background: ",
        [Function],
        ";
            ",
      ]
    }
  >
    <div
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        >
          <styled.p>
            <p
              className="c2"
            >
              notification message
            </p>
          </styled.p>
          <styled.button
            onClick={[Function]}
          >
            <button
              className="c3"
              onClick={[Function]}
            >
              <FontAwesomeIcon
                border={false}
                className=""
                color="black"
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      352,
                      512,
                      Array [],
                      "f00d",
                      "M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z",
                    ],
                    "iconName": "times",
                    "prefix": "fas",
                  }
                }
                listItem={false}
                mask={null}
                name=""
                pull={null}
                pulse={false}
                rotation={null}
                size="4x"
                spin={false}
                symbol={false}
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-times fa-w-11 fa-4x "
                  color="black"
                  data-icon="times"
                  data-prefix="fas"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 352 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </button>
          </styled.button>
        </div>
      </styled.div>
      <div />
    </div>
  </styled.div>
</NotificationWindow>
`;

exports[`NotificationWindow should display a warning notification 1`] = `
.c0 {
  background: #ffcc00;
  border-style: solid;
  border-width: 0.4rem;
  width: 90%;
  position: relative;
  margin: 0 auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.5rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-align: center;
  font-size: 4rem;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0 1rem;
  overflow-wrap: break-word;
}

.c3 {
  border: none;
  background-color: transparent;
  font-size: 2rem;
}

@media (min-width:768px) {
  .c0 {
    width: 100%;
    margin: 0;
  }
}

<NotificationWindow
  notification={
    Object {
      "message": "notification message",
      "notificationType": "warning",
    }
  }
  onDismiss={[Function]}
>
  <styled.div
    background={
      Array [
        "
              background: ",
        [Function],
        ";
            ",
      ]
    }
  >
    <div
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        >
          <styled.p>
            <p
              className="c2"
            >
              notification message
            </p>
          </styled.p>
          <styled.button
            onClick={[Function]}
          >
            <button
              className="c3"
              onClick={[Function]}
            >
              <FontAwesomeIcon
                border={false}
                className=""
                color="black"
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      352,
                      512,
                      Array [],
                      "f00d",
                      "M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z",
                    ],
                    "iconName": "times",
                    "prefix": "fas",
                  }
                }
                listItem={false}
                mask={null}
                name=""
                pull={null}
                pulse={false}
                rotation={null}
                size="4x"
                spin={false}
                symbol={false}
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-times fa-w-11 fa-4x "
                  color="black"
                  data-icon="times"
                  data-prefix="fas"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 352 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </button>
          </styled.button>
        </div>
      </styled.div>
      <div />
    </div>
  </styled.div>
</NotificationWindow>
`;

exports[`NotificationWindow should display an error notification 1`] = `
.c0 {
  background: Tomato;
  border-style: solid;
  border-width: 0.4rem;
  width: 90%;
  position: relative;
  margin: 0 auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.5rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-align: center;
  font-size: 4rem;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0 1rem;
  overflow-wrap: break-word;
}

.c3 {
  border: none;
  background-color: transparent;
  font-size: 2rem;
}

@media (min-width:768px) {
  .c0 {
    width: 100%;
    margin: 0;
  }
}

<NotificationWindow
  notification={
    Object {
      "message": "notification message",
      "notificationType": "error",
    }
  }
  onDismiss={[Function]}
>
  <styled.div
    background={
      Array [
        "
              background: ",
        [Function],
        ";
            ",
      ]
    }
  >
    <div
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        >
          <styled.p>
            <p
              className="c2"
            >
              notification message
            </p>
          </styled.p>
          <styled.button
            onClick={[Function]}
          >
            <button
              className="c3"
              onClick={[Function]}
            >
              <FontAwesomeIcon
                border={false}
                className=""
                color="black"
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      352,
                      512,
                      Array [],
                      "f00d",
                      "M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z",
                    ],
                    "iconName": "times",
                    "prefix": "fas",
                  }
                }
                listItem={false}
                mask={null}
                name=""
                pull={null}
                pulse={false}
                rotation={null}
                size="4x"
                spin={false}
                symbol={false}
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-times fa-w-11 fa-4x "
                  color="black"
                  data-icon="times"
                  data-prefix="fas"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 352 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </button>
          </styled.button>
        </div>
      </styled.div>
      <div />
    </div>
  </styled.div>
</NotificationWindow>
`;

exports[`NotificationWindow should not render anything 1`] = `""`;
